# SwarmNav-Sim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CORE_NODES_IMPLEMENTATION.md  CURRENT_STATUS.md  IGNITION_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  NEXT_STEPS_PROGRESS.md  QUICKSTART.md  README.md  ROBOT_SPAWNING_COMPLETE.md  RUNNING_INSTRUCTIONS.md  TUNING.md  build.sh  fix_cpplint.py  fix_flake8.py  fix_includes.py  fix_lints.py  fix_quotes.py  fix_quotes2.py  frames_2026-05-14_11.01.06.gv  frames_2026-05-16_17.38.41.gv  launch_log.txt  manual_control_demo.sh  setup_dependencies.sh  test_launch.py  test_nav2_util.cpp
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
archive/: DOCUMENTATION_SUMMARY.md  FEATURE_003_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  IGNITION_INTEGRATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  frames_2026-05-09_18.18.47.gv  frames_2026-05-16_15.25.18.gv
coppeliasim/: README.md
coppeliasim/scenes/: scripts.lua
scripts/: start_discovery_server.sh
specs/001-swarm-nav-sim/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-swarm-nav-sim/checklists/: requirements.md
specs/001-swarm-nav-sim/contracts/: dds-topics.md
specs/002-complete-core-nodes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-complete-core-nodes/checklists/: requirements.md
specs/002-complete-core-nodes/contracts/: dds-qos-corrections.md
specs/003-sim-integration-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sim-integration-testing/checklists/: requirements.md
specs/003-sim-integration-testing/contracts/: simulator-bridge.md
specs/004-deep-analyze-tune/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-deep-analyze-tune/checklists/: requirements.md
specs/004-deep-analyze-tune/contracts/: cli_args.md
specs/005-mission-executor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test_guide.md
specs/005-mission-executor/checklists/: requirements.md
specs/005-mission-executor/contracts/: ROS2_API.md
specs/006-fix-swarm-navigation/: plan.md  spec.md  tasks.md
specs/006-fix-swarm-navigation/checklists/: requirements.md
src/swarm_nav_bringup/: CMakeLists.txt  package.xml
src/swarm_nav_bringup/config/: bridge_config.yaml  diff_drive_controller.yaml  fastdds_discovery.xml  mrg_slam_multirobot.yaml  robot_nav2.yaml
src/swarm_nav_bringup/config/behavior_trees/: mission_tree.xml
src/swarm_nav_bringup/launch/: coppeliasim.launch.py  fortress.launch.py  gazebo.launch.py  gazebo_classic.launch.py  gazebo_simple.launch.py  harmonic.launch.py  ignition.launch.py  ignition_with_exploration.launch.py  ignition_with_robots.launch.py  swarm.launch.py  swarm_minimal.launch.py  warehouse_world.launch.py
src/swarm_nav_bringup/rviz/: swarm_nav.rviz
src/swarm_nav_bringup/swarm_nav_bringup/: simple_explorer.py
src/swarm_nav_bringup/test/: test_system_launch.py  test_topic_publishing.py
src/swarm_nav_bringup/urdf/: swarm_robot.urdf.xacro  swarm_robot.urdf.xacro.test
src/swarm_nav_bringup/worlds/: warehouse.world  warehouse_gz.sdf
src/swarm_nav_coordination/: CMakeLists.txt  package.xml
src/swarm_nav_coordination/include/swarm_nav_coordination/: mission_executor_node.hpp
src/swarm_nav_coordination/src/: auctioneer_node.cpp  frontier_detector_node.cpp  mission_executor_main.cpp  mission_executor_node.cpp
src/swarm_nav_coordination/src/bt_nodes/: bt_plugin_registration.cpp  frontier_detector_bt.cpp  map_coverage_check.cpp  run_auction_bt.cpp
src/swarm_nav_coordination/test/: test_auctioneer.cpp  test_mission_executor.cpp
src/swarm_nav_evaluation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/swarm_nav_evaluation/config/: scenarios.yaml  tune_space.yaml
src/swarm_nav_evaluation/launch/: benchmark.launch.py  evaluation.launch.py  tuning.launch.py
src/swarm_nav_evaluation/swarm_nav_evaluation/: bayesian_tuner.py  benchmark_runner.py  collision_monitor.py  coverage_evaluator.py  report_utils.py  slam_metrics.py  system_metrics.py  timer_shutdown.py
src/swarm_nav_evaluation/test/: test_bayesian_tuner.py  test_benchmark_runner.py  test_collision_monitor.py  test_coverage_evaluator.py
src/swarm_nav_msgs/: CMakeLists.txt  package.xml
src/swarm_nav_msgs/msg/: AuctionAnnounce.msg  AuctionBid.msg  AuctionResult.msg  Frontier.msg  FrontierArray.msg  NeighborState.msg  NeighborStateArray.msg  Obstacle.msg  ObstacleArray.msg
src/swarm_nav_navigation/: CMakeLists.txt  package.xml  plugins.xml
src/swarm_nav_navigation/include/swarm_nav_navigation/: neighbor_state_aggregator_node.hpp  obstacle_tracker_node.hpp  orca_velocity_filter_node.hpp
src/swarm_nav_navigation/plugins/: costmap_plugins.xml  dynamic_obstacle_layer.cpp  dynamic_obstacle_layer.hpp
src/swarm_nav_navigation/src/: neighbor_state_aggregator_node.cpp  obstacle_tracker_node.cpp  orca_velocity_filter_node.cpp
src/swarm_nav_navigation/test/: test_aggregator.cpp  test_obstacle_tracker.cpp  test_orca_filter.cpp
src/swarm_nav_slam/: CMakeLists.txt  package.xml
src/swarm_nav_slam/src/: graph_merge_node.cpp
src/swarm_nav_slam/test/: test_graph_merge.cpp
